	* GuidTest.cs: added a few cases

2002-02-18  Nick Drochak  <ndrochak@gol.com>

	* GuidTest.cs: Fix compile error.  Needed to cast the null in the call to
	constructor to avoid ambiguity.

2002-02-11  Nick Drochak  <ndrochak@gol.com>

	* Int64Test.cs: Various fixes to make tests work against the ms corlib.
	Currency Symbol tests seem to be system dependant.  Not sure if this
	will work on other systems, so please test it if you can. The most
	disturbing one is negative numbers.  Should they be (n) or -n ?

2002-02-10  Nick Drochak  <ndrochak@gol.com>

	* AllTests.cs: Add Int64Test to the Suite
	* Int64Test.cs: Change static member to instance member. This was
	causing NUnitConsole some grief.  Should be instance member anyway.

2002-02-09  Nick Drochak  <ndrochak@gol.com>

	* ByteTest.cs:
	* Int16Test.cs:
	* Int32Test.cs:
	* SByteTest.cs:
	* UInt16Test.cs:
	* UInt32Test.cs:
	* UInt64Test.cs: Fixed tests where a "$" was hard coded.  Change it to
	use NumberFormatInfo.CurrentInfo.CurrencySymbol.  Also used
	NumberFormatInfo.InvariantInfo.CurrencySymbol where appropriate. These
	tests all pass now with mscorlib.

2002-01-06  Nick Drochak  <ndrochak@gol.com>

	* ResolveEventArgsTest.cs: New test.
	* AllTests.cs: Added new test to suite.

2001-12-27  Nick Drochak <ndrochak@gol.com>

	* UInt32Test.cs: Added messages to Asserts()'s to find out which one was faliing.

2001-12-21  Miguel de Icaza  <miguel@ximian.com>

	* UInt32Test.cs: Added tests for UInt32.Parse.

	* Int32Test.cs: Added tests for Int32.Parse for various cases.

2001-12-08  Nick Drochak  <ndrochak@gol.com>

	* ByteTest.cs: Added messages to Assert()'s to find out which one was failing.

2001-11-28  Nick Drochak <ndrochak@gol.com>

	* Int16Test.cs Int32Test.cs SByteTest.cs: Surgically removed tests that rely on culture of system.  These need to be crafted a bit differently.

2001-11-27  Nick Drochak  <ndrochak@gol.com>

	* SByteTest.cs: Add messages to Assert()'s so we can tell where the tests fail.
